# social_networks

./: CHANGELOG.md  Cargo.toml  README.md  flake.nix
.cargo/: .clippy.toml  config.toml  log_directives
.github/workflows/: errors.yml  other.yml  release-linux-aarch64.yml  release.yml  warnings.yml
.readme_assets/: installation.md  installation.sh  usage.md
docs/: ARCHITECTURE.md
docs/.readme_assets/: description.md  installation.md  usage.md
examples/: check_type_sizes.rs  config.nix  config.toml  test_ask_llm_isolated.rs
social_networks/: Cargo.toml
social_networks/src/: config.rs  dms.rs  health.rs  main.rs
social_networks_adapters/: Cargo.toml
social_networks_adapters/src/: client.rs  discord.rs  dm_event.rs  email.rs  lib.rs  telegram_channel_watch.rs  telegram_dms.rs  telegram_notifier.rs  twitter.rs  twitter_schedule.rs  youtube.rs
social_networks_utils/: Cargo.toml
social_networks_utils/src/: config.rs  db.rs  lib.rs  telegram_notifier.rs  telegram_utils.rs  utils.rs
src/: config.rs  db.rs  discord.rs  email.rs  health.rs  lib.rs  main.rs  telegram.rs  telegram_channel_watch.rs  telegram_notifier.rs  telegram_utils.rs  twitter.rs  twitter_schedule.rs  twitter_user.rs  utils.rs  youtube.rs
src/dms/: discord.rs  mod.rs  telegram.rs
tests/: test_ask_llm.rs
