cargo-features = ["codegen-backend"]

[workspace]
members = ["social_networks", "social_networks_*"]
resolver = "3"

[workspace.lints.clippy]
# Stable
float_cmp = "allow" # is bad for `==` direct comparisons, but `<` and `>` should be allowed
len_zero = "allow" # `.empty()` is O(1) but on &str only
undocumented_unsafe_blocks = "warn"
tabs_in_doc_comments = "allow"

# Questionable
# const fns, so actually more performant
get_first = "allow"
get_last_with_len = "allow"

[workspace.lints.rust]
unused_features = "allow"

[workspace.dependencies]
ask_llm = "=2.2.2"
base64 = "=0.22.1"
clap = { version = "=4.6.1", features = ["derive"] }
color-eyre = "=0.6.5"
colored = "=3.1.1"
config = "=0.15.23"
derive-new = "=0.7.0"
futures = "=0.3.32"
futures-util = "=0.3.32"
google-gmail1 = "=7.0.0"
grammers-client = "=0.9.0"
grammers-mtsender = "=0.9.0"
grammers-session = "=0.9.0"
grammers-tl-types = "=0.9.0"
hmac = "=0.13.0"
hyper = "=1.10.1"
hyper-rustls = "=0.27.9"
hyper-util = { version = "=0.1.20", features = ["client", "client-legacy", "http1"] }
imap = "=3.0.0-alpha.15"
jiff = { version = "=0.2.28", features = ["serde"] }
libsql = "=0.9.30"
miette = { version = "=7.6.0", features = ["fancy", "syntect-highlighter", "serde"] }
oauth1-request = "=0.6.1"
psm = "=0.1.31"
quick-xml = "=0.40.1"
rand = "=0.10.1"
regex = "=1.12.3"
reqwest = { version = "=0.13.4", features = ["json", "multipart", "query", "form"] }
rustls = { version = "=0.23.40", features = ["aws-lc-rs"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
sha1 = "=0.11.0"
tg = "=0.9.5"
thiserror = "=2.0.18"
tokio = { version = "=1.52.3", features = ["full"] }
tokio-tungstenite = { version = "=0.29.0", features = ["native-tls"] }
tracing = "=0.1.44"
tracing-appender = "=0.2.5"
tracing-subscriber = "=0.3.23"
trait-variant = "=0.1.2"
v_exchanges = { version = "=0.18.1", default-features = false, features = ["binance"] }
v_utils = { version = "=2.15.48", features = ["xdg", "cli", "tracing"] }
xdg = { version = "=3.0.0", features = ["serde"] }
yup-oauth2 = "=12.1.2"

social_networks_adapters = { path = "social_networks_adapters", version = "0.3.7" }
social_networks_utils = { path = "social_networks_utils", version = "0.3.7" }

insta = "=1.47.2"

# grammers-crypto 0.9.0 requires `glass_pumpkin ^1.10.0`, but 1.10.0 was yanked from crates.io
# (upstream moved straight to 2.0.0-rc0, leaving no selectable version for that req). This pins
# glass_pumpkin to the exact tree that was published as 1.10.0 so `cargo update` can resolve it.
# Drop once grammers-crypto relaxes the req / publishes against a non-yanked glass_pumpkin.
[patch.crates-io]
glass_pumpkin = { git = "https://github.com/mikelodder7/glass_pumpkin", rev = "b57e78d7d96f2b782e6a9adc78a7cbba8288207d" }
