cargo-features = ["codegen-backend"]

[package]
name = "social_networks"
version = "0.3.10"
edition = "2024"
authors = ["Valeriy Sakharov <valeratrades@gmail.com>"]
description = "my utils for social networks managing/monitoring"
readme = "../README.md"
license = "BlueOak-1.0.0"
repository = "https://github.com/valeratrades/social_networks"

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

# keep single-crate-style tags: release workflows trigger on `v[0-9]+.*` and binstall pkg-url expects `v{version}`
[package.metadata.release]
tag-name = "v{{version}}"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }.tar.gz"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[dependencies]
clap.workspace = true
color-eyre.workspace = true
colored.workspace = true
jiff.workspace = true
miette.workspace = true
serde.workspace = true
social_networks_adapters.workspace = true
social_networks_utils.workspace = true
tokio.workspace = true
tracing.workspace = true
v_utils.workspace = true
xdg.workspace = true

[lints]
workspace = true
