cargo-features = ["codegen-backend"]

[package]
name = "social_networks_adapters"
version = "0.3.8"
edition = "2024"
authors = ["Valeriy Sakharov <valeratrades@gmail.com>"]
description = "long-running social network surface adapters for social_networks"
license = "BlueOak-1.0.0"
repository = "https://github.com/valeratrades/social_networks"

[dependencies]
ask_llm.workspace = true
base64.workspace = true
clap.workspace = true
color-eyre.workspace = true
futures.workspace = true
futures-util.workspace = true
google-gmail1.workspace = true
grammers-client.workspace = true
grammers-session.workspace = true
grammers-tl-types.workspace = true
hmac.workspace = true
hyper-rustls.workspace = true
hyper-util.workspace = true
imap.workspace = true
jiff.workspace = true
miette.workspace = true
quick-xml.workspace = true
rand.workspace = true
regex.workspace = true
reqwest.workspace = true
rustls.workspace = true
serde.workspace = true
serde_json.workspace = true
sha1.workspace = true
social_networks_utils.workspace = true
tg.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tracing.workspace = true
trait-variant.workspace = true
v_utils.workspace = true
xdg.workspace = true
yup-oauth2.workspace = true

[dev-dependencies]
insta.workspace = true

[lints]
workspace = true
